--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,10 @@ sha2 = "0.10.9"
 hex = "0.4.3"
 jwt = "0.16.0"
 hmac = "0.12.1"
+futures-util = "0.3.31"
+url = "2.5.4"
+tungstenite = "0.27.0"
+tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
 
 [[test]]
 name = "strategy_tests"
