Enhance backtesting framework and update strategy signals
- Refactored backtesting logic to improve position management and signal handling.
- Introduced new signal structure to include reasons for buy/sell actions.
- Updated strategy parameters and logic to incorporate risk management features.
- Added new helper functions for calculating indicators like MACD and ATR.
- Removed obsolete strategy files and tests to streamline the codebase.
- Updated dependencies in Cargo.toml and Cargo.lock to reflect changes in the project structure.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,13 @@ futures-util = "0.3.31"
 url = "2.5.4"
 tungstenite = "0.27.0"
 tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
+chrono = "0.4.41"
+rand = "0.9.2"
 
 [[test]]
 name = "strategy_tests"
 path = "tests/strategy/mod.rs"
+
+[[test]]
+name = "helper"
+path = "tests/helper/mod.rs"
