--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ tungstenite = "0.27.0"
 tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
 chrono = "0.4.41"
 rand = "0.9.2"
+colored = "2.1"
 
 [[test]]
 name = "strategy_tests"
