Enhance backtesting and webhook functionality
- Added support for sending webhook notifications on trade actions (buy/sell).
- Updated backtester to include parameters for enabling webhook logging.
- Refactored strategy logic to utilize new indicator calculations and improve decision-making.
- Introduced new functions for filtering trades by minute and managing real-time data.
- Updated dependencies in Cargo.toml and Cargo.lock to reflect changes in the project structure.

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 UPBIT_ACCESS_KEY=5spSVXcjpODhbCmc4MbPOSxe90Sncv7tcVBURoTF
 UPBIT_SECRET_KEY=gnliWOHEk1jiasastF7JlA3CJ8uvDtPHxo9P8kLZ
+WEBHOOK_URL=https://discord.com/api/webhooks/1398990162037444628/zcfi4cT76IBBtQur0LvK_WJod750VlWNdPTAbxOfuM8-iex0mbvvdWWFJksJleo4OTbh
