--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
 chrono = "0.4.41"
 rand = "0.9.2"
 colored = "2.1"
+webhook = { version = "2.1.2", features = ["models"] }
+ctrlc = "3.4.7"
 
 [[test]]
 name = "strategy_tests"
