--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ rand = "0.9.2"
 colored = "2.1"
 webhook = { version = "2.1.2", features = ["models"] }
 ctrlc = "3.4.7"
+linregress = "0.5.4"
 
 [[test]]
 name = "strategy_tests"
